--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
       <link href="/src/styles.css" rel="stylesheet">
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blogging Website</title>
+    <title>Medium Website</title>
   </head>
   <body>
     <div id="root"></div>
